Добавлен OpenApiInfo.
